--- a/home.html
+++ b/home.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>MERN STACK COURSE</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolore atque eligendi autem ullam, id eaque dicta voluptatem iusto ratione temporibus aperiam magni blanditiis nulla possimus illum deleniti quos pariatur.
+    </p>
 </body>
 </html>
