--- a/home.html
+++ b/home.html
@@ -11,5 +11,6 @@
     <h1>MERN STACK COURSE</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolore atque eligendi autem ullam, id eaque dicta voluptatem iusto ratione temporibus aperiam magni blanditiis nulla possimus illum deleniti quos pariatur.
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus adipisci porro, fugit non omnis, hic officia dignissimos libero labore autem nihil nulla!</p>
 </body>
 </html>
